--- a/templates/base.html
+++ b/templates/base.html
@@ -1,16 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>
-            {% block title %}thirtyfourdownloader{% endblock %}
-        </title>
-        <link rel="stylesheet" href="/styles.css" />
-    </head>
-    <body>
-        <div id="content">
-            {% block content %}{% endblock %}
-        </div>
-    </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>{% block title %}thirtyfourdownloader{% endblock %}</title>
+		<link rel="stylesheet" href="/styles.css" />
+	</head>
+	<body class="m-2 dark:bg-neutral-800 dark:text-neutral-100">
+		{% block content %}
+		{% endblock %}
+		<script src="/htmx.js"></script>
+	</body>
 </html>
