--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,7 @@
 				<a
 					class="cursor-pointer rounded-md border border-neutral-300 px-4 py-2 text-xl font-medium text-sky-500 shadow select-none hover:bg-neutral-50 active:bg-neutral-100 active:shadow-none dark:border-neutral-600 dark:text-sky-300 dark:hover:bg-neutral-700"
 					href="/?page=1"
+					hx-trigger="click, keyup[shiftKey&&key=='ArrowLeft'] from:body"
 				>
 					<<
 				</a>
@@ -27,7 +28,7 @@
 				<a
 					class="cursor-pointer rounded-md border border-neutral-300 px-4 py-2 text-xl font-medium text-sky-500 shadow select-none hover:bg-neutral-50 active:bg-neutral-100 active:shadow-none dark:border-neutral-600 dark:text-sky-300 dark:hover:bg-neutral-700"
 					href="/?page={{ current_page - 1 }}"
-					hx-trigger="click, keyup[key=='ArrowLeft'] from:body"
+					hx-trigger="click, keyup[!shiftKey&&key=='ArrowLeft'] from:body"
 				>
 					<
 				</a>
@@ -43,6 +44,12 @@
 					<a
 						class="cursor-pointer rounded-md border border-neutral-300 px-4 py-2 text-xl font-medium text-sky-500 shadow select-none hover:bg-neutral-50 active:bg-neutral-100 active:shadow-none dark:border-neutral-600 dark:text-sky-300 dark:hover:bg-neutral-700"
 						href="/?page={{ page_number }}"
+						{% if loop.last && !pagination.show_last %}
+							hx-trigger="click, keyup[shiftKey&&key=='ArrowRight'] from:body"
+						{% endif %}
+						{% if loop.first && !pagination.show_first %}
+							hx-trigger="click, keyup[shiftKey&&key=='ArrowLeft'] from:body"
+						{% endif %}
 					>
 						{{ page_number }}
 					</a>
@@ -52,7 +59,7 @@
 				<a
 					class="cursor-pointer rounded-md border border-neutral-300 px-4 py-2 text-xl font-medium text-sky-500 shadow select-none hover:bg-neutral-50 active:bg-neutral-100 active:shadow-none dark:border-neutral-600 dark:text-sky-300 dark:hover:bg-neutral-700"
 					href="/?page={{ current_page + 1 }}"
-					hx-trigger="click, keyup[key=='ArrowRight'] from:body"
+					hx-trigger="click, keyup[!shiftKey&&key=='ArrowRight'] from:body"
 				>
 					>
 				</a>
@@ -61,6 +68,7 @@
 				<a
 					class="cursor-pointer rounded-md border border-neutral-300 px-4 py-2 text-xl font-medium text-sky-500 shadow select-none hover:bg-neutral-50 active:bg-neutral-100 active:shadow-none dark:border-neutral-600 dark:text-sky-300 dark:hover:bg-neutral-700"
 					href="/?page={{ pagination.total_page_count }}"
+					hx-trigger="click, keyup[shiftKey&&key=='ArrowRight'] from:body"
 				>
 					>>
 				</a>
